--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Formatura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao">quartel</button>
+                <button class="botao">trabalho</button>
+                <button class="botao">rico e saliente</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">sonho</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
